samples/_failures_safe/1761641249_1b003b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c93c7b6.c: In function ‘main’:
./samples/SAFE/__tmp_7c93c7b6.c:142:12: error: missing terminating " character
  142 |     printf("Enter 'END' to finish input
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7c93c7b6.c:142:5: error: expected expression at end of input
  142 |     printf("Enter 'END' to finish input
      |     ^~~~~~
./samples/SAFE/__tmp_7c93c7b6.c:142:5: error: expected declaration or statement at end of input
